--- a/IanSavchenko.Controls/Themes/Generic.xaml
+++ b/IanSavchenko.Controls/Themes/Generic.xaml
@@ -66,7 +66,7 @@
                                         <ColorAnimation Duration="0:0:0"
                                                         Storyboard.TargetName="ContentBrush"
                                                         Storyboard.TargetProperty="(SolidColorBrush.Color)"
-                                                        To="{ThemeResource PhoneBackgroundColor}" />
+                                                        To="White" />
 
                                     </Storyboard>
                                 </VisualState>
